RESOLVED FIXED173555
Fix warnings for unused lambda captures in Source/WebKit
https://bugs.webkit.org/show_bug.cgi?id=173555
Summary Fix warnings for unused lambda captures in Source/WebKit
Konstantin Tokarev
Reported 2017-06-19 11:12:22 PDT
Remove unused lamda captures from WebKit2
Attachments
Patch (8.60 KB, patch)
2017-06-19 11:13 PDT, Konstantin Tokarev
no flags
Patch (9.56 KB, patch)
2017-06-19 11:30 PDT, Konstantin Tokarev
no flags
Patch (8.68 KB, patch)
2018-04-02 02:06 PDT, Frédéric Wang Nélar
no flags
Patch (8.95 KB, patch)
2018-04-02 03:50 PDT, Frédéric Wang Nélar
annulen: review+
Konstantin Tokarev
Comment 1 2017-06-19 11:13:43 PDT
Konstantin Tokarev
Comment 2 2017-06-19 11:30:57 PDT
WebKit Commit Bot
Comment 3 2017-06-19 13:14:57 PDT
Comment on attachment 313316 [details] Patch Clearing flags on attachment: 313316 Committed r218503: <http://trac.webkit.org/changeset/218503>
WebKit Commit Bot
Comment 4 2017-06-19 13:14:59 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 5 2017-06-19 13:40:56 PDT
(In reply to WebKit Commit Bot from comment #3) > Comment on attachment 313316 [details] > Patch > > Clearing flags on attachment: 313316 > > Committed r218503: <http://trac.webkit.org/changeset/218503> This change broke the 32-bit build on macOS Sierra: https://build.webkit.org/builders/Apple%20Sierra%20Release%20%2832-bit%20Build%29/builds/2730
Ryan Haddad
Comment 6 2017-06-19 13:49:22 PDT
(In reply to Ryan Haddad from comment #5) > (In reply to WebKit Commit Bot from comment #3) > > Comment on attachment 313316 [details] > > Patch > > > > Clearing flags on attachment: 313316 > > > > Committed r218503: <http://trac.webkit.org/changeset/218503> > > This change broke the 32-bit build on macOS Sierra: > > https://build.webkit.org/builders/Apple%20Sierra%20Release%20%2832- > bit%20Build%29/builds/2730 Actually, it broke all of the Sierra builds: https://build.webkit.org/builders/Apple%20Sierra%20Release%20%28Build%29/builds/2875 https://build.webkit.org/builders/Apple%20Sierra%20Debug%20%28Build%29/builds/2867
Ryan Haddad
Comment 7 2017-06-19 13:54:19 PDT
Reverted r218503 for reason: This change broke the macOS Sierra build. Committed r218506: <http://trac.webkit.org/changeset/218506>
Michael Catanzaro
Comment 8 2017-06-23 18:24:46 PDT
Planning to fix and reland this?
Konstantin Tokarev
Comment 9 2017-06-24 03:09:37 PDT
Let's try
Konstantin Tokarev
Comment 10 2017-06-24 03:16:44 PDT
WebKit Commit Bot
Comment 11 2017-06-24 03:22:56 PDT
Re-opened since this is blocked by bug 173808
Frédéric Wang Nélar
Comment 12 2018-04-02 02:05:40 PDT
After upgrade to XCode 9.3 (30 March 2018), iOS builds are now failing with the warning: "lambda capture 'this' is not used [-Wunused-lambda-capture]" So I suspect we will eventually need to take Konstantin's patch.
Frédéric Wang Nélar
Comment 13 2018-04-02 02:06:49 PDT
Frédéric Wang Nélar
Comment 14 2018-04-02 03:50:41 PDT
Frédéric Wang Nélar
Comment 15 2018-04-02 05:45:11 PDT
Radar WebKit Bug Importer
Comment 16 2018-04-02 05:46:21 PDT
Konstantin Tokarev
Comment 17 2018-04-02 05:46:58 PDT
I don't actually like amount of code line overhead and fact that unused variables are captured (though maybe compiler optimizes them away, I didn't check), but in these particular usages it's fine with me. If this situation repeats in other places, we may need to consider some other solution
Note You need to log in before you can comment on or make changes to this bug.